<resources>
    <string name="app_name">Kredit Motor</string>
    <string name="home">Beranda</string>
    <string name="transaction">Transaksi</string>
    <string name="about">Tentang</string>
    <string name="version">Versi: %s</string>
    <string name="developed_by">Dikembangkan Oleh:</string>
    <string name="employee_data">Data Petugas</string>
    <string name="motorcycle_data">Data Motor</string>
    <string name="creditors_data">Data Kreditor</string>
    <string name="credit_application">Pengajuan Kredit</string>
    <string name="installment_payment">Pembayaran Angsuran</string>
    <string name="credit_application_data">Data Pengajuan Kredit</string>
    <string name="installment_payment_data">Data Pembayaran Angsuran</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="add_employee">Tambah Petugas</string>
    <string name="edit_employee">Edit Petugas</string>
    <string name="add_motorcycle">Tambah Motor</string>
    <string name="edit_motorcycle">Edit Motor</string>
    <string name="add_creditor">Tambah Kreditor</string>
    <string name="edit_creditor">Edit Kreditor</string>
    <string name="delete">Hapus</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="add_data">Tambah Data</string>
    <string name="code">Kode</string>
    <string name="name">Nama</string>
    <string name="price">Harga</string>
    <string name="role">Jabatan</string>
    <string name="action">Aksi</string>
    <string name="confirm_delete">Apakah anda yakin ingin menghapus %s?</string>
    <string name="job">Pekerjaan</string>
    <string name="phone">Telepon</string>
    <string name="address">Alamat</string>
    <string name="creditor">Kreditor</string>
    <string name="motorcycle_code">Kode Motor</string>
    <string name="down_payment">Uang Muka</string>
    <string name="interest_per_year">Bunga / Tahun</string>
    <string name="installment_period">Lama Angsuran (Bulan)</string>
    <string name="motorcycle_name">Nama Motor</string>
    <string name="motorcycle_price">Harga Motor</string>
    <string name="credit_price">Harga Kredit</string>
    <string name="total_credit">Total Kredit</string>
    <string name="monthly_installments">Angsuran per Bulan</string>
    <string name="reset">Reset</string>
    <string name="date">Tanggal</string>
</resources>