<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreditApplicationActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/creditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/creditor"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/motorcycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motorcycle_code"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/down_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/down_payment" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/interest_per_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/interest_per_year" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/installment_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/installment_period" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motorcycle_name" />

                <TextView
                    android:id="@+id/motorcycle_name"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/motorcycle_name" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/motorcycle_price" />

                <TextView
                    android:id="@+id/motorcycle_price"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/motorcycle_price" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/credit_price" />

                <TextView
                    android:id="@+id/credit_price"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/credit_price" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/total_credit" />

                <TextView
                    android:id="@+id/total_credit"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/total_credit" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/monthly_installments" />

                <TextView
                    android:id="@+id/monthly_installments"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/monthly_installments" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include android:id="@+id/loading" layout="@layout/loading_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>