<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/employee_data"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/design_default_color_on_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="24dp"
                android:alpha="0.4"
                android:importantForAccessibility="no"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:translationY="12dp"
                app:srcCompat="@drawable/ic_employee_92" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_motorcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/motorcycle_data"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/design_default_color_on_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="24dp"
                android:alpha="0.4"
                android:importantForAccessibility="no"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:translationY="12dp"
                app:srcCompat="@drawable/ic_motorcycle_92" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_creditors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/creditors_data"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/design_default_color_on_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="24dp"
                android:alpha="0.4"
                android:importantForAccessibility="no"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:translationY="12dp"
                app:srcCompat="@drawable/ic_creditors_92" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>